# AIE6-llm-agent-template

./: .gitignore  README.md  pyproject.toml
backend/: .env.template  README.md  main.py
backend/agents/: agent_loader.py
backend/api/: __init__.py  agent.py  query.py  upload.py
backend/core/: chatmodel.py  embeddings.py  text_utils.py  vector_store.py  vectordatabase.py
backend/prompts/: __init__.py  base_prompts.py  prompt_manager.py
backend/tools/: __init__.py  dummy_tool.py  registry.py
frontend/: .env.template  README.md  index.html  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: ChatBox.jsx  FileUploader.jsx
frontend/src/utils/: env.js
